
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   123: AstroFloyd, 20/08/2010
     - plotmdl: 
       - added var 220: post-CE period, based on r(m)=R_rl (M2=M1)
       - added var 221: post-CE period, based on alpha-CE  (M2=M1)
       
   122: AstroFloyd, 20/08/2010
     - plotmdl: 
       - moved vars 216-218 to 217-219
       - added var 216: dM, fixed vars 217-218 (Ebind)
       
   121: AstroFloyd, 20/08/2010
     - plotplt:
       - Redefined var 130: J_spin -> w_spin
       - Added vars 142-143: Mbin, a_orb
       - Added vars 144-146: J_orb, J_spin, J_tot
       - Added vars 147-151: E_orb, E_spin, E_so, E_bind, E_tot
       
   120: AstroFloyd, 07/08/2010
     - plotplt:
       - Don't plot logarithmic Teff axis in HRD for small T ranges
       - Add more info in title of auto-update plot
   
   119: AstroFloyd, 30/07/2010
     - Add variable 141 to plotplt: GMMenv/R
     
   109: AstroFloyd, 21/07/2010
     - Update documentation/comments
     
   108: AstroFloyd, 21/07/2010
     - Added Doxyfile
     - Added/improved comments in function files
   
   107: AstroFloyd, 21/07/2010
     - Put line colours in the module constants
     
   106: AstroFloyd, 21/07/2010
     - Add white_bg to module constants and settings file (integer -> logical)
     - Updated print_code_version() in Makefile
   
   101-4: AstroFloyd, 21/07/2010
     - Try to fix mod and obj directories
    
   100: AstroFloyd, 21/07/2010
     - Updated Makefile
    
    94: AstroFloyd, 14/07/2010
     - Minor update in Makefile to report program version
    
    93: AstroFloyd, 14/07/2010
     - Fixed some 'uninitialised variable' compiler warnings
    
    92: AstroFloyd, 14/07/2010
     - Updated Makefile
     - Small changes in settings file
     - Small bugfix
    
    91: AstroFloyd, 13/07/2010
     - Store screen size + dpi in settings file iso paper size/ratio
    